Create articles table, models and app validations

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,7 @@ p {
 <h1>“UNITED in FORCE! UNITED in SPIRIT!”</h1>
 <%= image_tag src="logo.png", :class => "img_logo"%>
 <p>
-<i><font color="orange">You can find full information about World Nomad Games here: <b><font color="blue">http://worldnomadgames.com/en/</font></b></font></i><br>
+<i><font color="orange">You can find full information about World Nomad Games here: <b><font color="blue"><a href="http://worldnomadgames.com/en/">http://worldnomadgames.com/en/</a></font></b></font></i><br>
   The World Nomad Games will be held in 2016 from 3 – 8 of September on the shore of the Issyk-Kul Lake, in Kyrgyzstan.<br>
   <b>The mission of the Games</b> - revival and preservation of the historical cultural heritage of the nomadic people’s civilization of the world.<br>
   <b>Objectives of the Games:</b><br>
