Add partials and destroy action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -76,7 +76,7 @@ p {
   <b>World Nomad Games is the most dimensioned international project of the Kyrgyz Republic.</b>
 </p>
 
-<footer><%= link_to 'About', about_path, :class => "nav" %></footer>
+<footer><%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About', about_path, :class => "nav" %></footer>
 
 </body>
 </html>
