--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,82 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>World Nomad Games</title>
-<style>
-.img_wng {
-  height: 100px;
-  width: 500px;
-  float: top;
-  padding-left: 30%;
-  padding-top: 10px;
-  padding-bottom: 0;
-}
-.img_logo {
-  height: 300px;
-  width: 300px;
-  float: right;
-  padding: 0 50px 0 20px;
-}
-h1 {
-  padding-left: 23%;
-  padding-top: 10px;
-  font-family:Arial;
-  color:red;
-  font-size: 200%;
-}
-h2 {
-  padding-left: 50px;
-  font-family:Cursive;
-  color:orange;
-  font-size: 150%;
-}
-.nav {
-  font-style: italic;
-  font-size: 20px;
-  margin-left: 10px;
-  color: white;
-}
-p {
-  text-align: justify;
-  font-family:Arial;
-  font-size:110%;
-  padding: 0 50px;
-}
-  footer {
-      background-color: red;
-      margin: 0 50px;
-  }
-</style>
+  <title>Alpha Blog</title>
+
 </head>
 <body>
-  <%= image_tag src='wng.jpg', :class => "img_wng" %>
-<h1>“UNITED in FORCE! UNITED in SPIRIT!”</h1>
-<%= image_tag src="logo.png", :class => "img_logo"%>
-<p>
-<i><font color="orange">You can find full information about World Nomad Games here: <b><font color="blue"><a href="http://worldnomadgames.com/en/">http://worldnomadgames.com/en/</a></font></b></font></i><br>
-  The World Nomad Games will be held in 2016 from 3 – 8 of September on the shore of the Issyk-Kul Lake, in Kyrgyzstan.<br>
-  <b>The mission of the Games</b> - revival and preservation of the historical cultural heritage of the nomadic people’s civilization of the world.<br>
-  <b>Objectives of the Games:</b><br>
-  - to show the world the greatness of nomadic civilization.<br>
-  - to show the world values of peace, culture and life of each ethnic group of nomadic world.<br>
-  - the opportunity to see the nomadic sports in their original form.<br>
-  - the opportunity to see the richness of the nomadic people of the world.<br>
-  <b>To the “World Nomad Games 2016” are invited:</b><br>
-  - Heads of states and governments;<br>
-  - Prominent figures in the field of the culture and science;<br>
-  - Athletes from 40 countries;<br>
-  - Mass media representatives from more than 50 countries with a possibility of broadcasting to 500,000,000 people.<br>
-  <b>The program of the World Nomad Games includes:</b><br>
-  - Grandiose opening and closing ceremonies of the Games;<br>
-  - Spectacular sports events and competitions in 23 kinds of ethnosport;<br>
-  - Culture events at picturesque gorge “Kyrchyn” and at the Hippodrome in Cholpon–Ata;<br>
-  - Cultural events and evening concerts;<br>
-  - Scientific Conference on the theme “Nomadic civilization: Historical Heritage and Modernity”;<br>
-  - Demonstration performances of folk and ethnic games of the world.<br>
-  <b>World Nomad Games is the most dimensioned international project of the Kyrgyz Republic.</b>
-</p>
-
-<footer><%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About', about_path, :class => "nav" %></footer>
+<h1>Home Page</h1><br>
+<%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About', about_path %>
 
 </body>
 </html>
