--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Alpha Blog</title>
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
 
-</head>
-<body>
-<h1>Home Page</h1><br>
-<%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About', about_path %>
-
-</body>
-</html>
+<%= link_to "Signup now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+</div>
