Add styling to show template

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,14 @@ $navbar-default-bg: #ff5a00;
   font-size: 1.7em;
   background-color: #FF4000;
 }
+.article-actions {
+  border-top: 1px solid #FF4000;
+  padding-top: 5px;
+}
+
+.description {
+  margin-top: 0;
+}
 
 footer {
   margin-top: 45px;
