Style articles listing page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,12 +41,23 @@ $navbar-default-bg: #ff5a00;
   background-color: #FF4000;
 }
 .article-actions {
-  border-top: 1px solid #FF4000;
+  border-top: 1px solid #eaeaea; /* #FFa500 */
   padding-top: 5px;
 }
 
 .description {
   margin-top: 0;
+}
+
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.article-body {
+border-top: 1px solid #eaeaea;
+padding-top: 15px;
+padding-bottom: 15px;
 }
 
 footer {
