--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,12 @@ $navbar-default-bg: #ff5a00;
   font-size: 1.7em;
   background-color: #FF4000;
 }
+
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
 .article-actions {
   border-top: 1px solid #eaeaea; /* #FFa500 */
   padding-top: 5px;
